[gd_scene load_steps=4 format=3 uid="uid://b6yub858xro3q"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_8y38m"]
[ext_resource type="Texture2D" uid="uid://0pksbw6wcfdh" path="res://Assets/enemyUFO.png" id="1_rq0q0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cyhvg"]
radius = 35.0

[node name="Enemy" type="Area2D" groups=["enemy"]]
script = ExtResource("1_8y38m")
verticalSpeed = null
healthPoints = null

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rq0q0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cyhvg")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(4.8, 4.8)

[node name="FiringPositions" type="Node2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
